[project]
name = "watch-dogs"
version = "0.1.0"
description = "Price checker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "ipython>=9.2.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "types-requests>=2.32.0.20250515",
]
